# somen-language

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  test.yml
examples/: arith.rs  json.rs
src/: character.rs  identifier.rs  lib.rs  literal.rs  macros.rs  numeric.rs  token.rs
src/literal/: numeric.rs
src/literal/numeric/: float.rs  integer.rs
src/numeric/: float.rs  integer.rs
src/numeric/float/: lemire.rs
src/token/numeric/: float.rs  integer.rs
