[package]
name = "somen-language"
version = "0.0.1"
description = "Utilities of the somen parser combinator for languages."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/somen-language"
keywords = ["parser-combinator", "parser", "language"]
categories = ["parsing", "asynchronous"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[features]
default = ['std']
std = ['alloc', 'somen/std', 'num-traits/std']
alloc = ['somen/alloc']
libm = ['num-traits/libm']

[dependencies]
somen = { version = "0.2.0", default_features = false }
num-traits = { version = "0.2", default_features = false }
compute-float = "0.1.0"

[dev-dependencies]
futures = "0.3"
