[package]
name = "somen-language"
version = "0.0.1"
description = "Utilities of the somen parser combinator for languages."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/somen-language"
keywords = ["parser-combinator", "parser", "language"]
categories = ["parsing", "asynchronous"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

# Debug informations will explodes because of the nests of "impl Parser".
[profile.dev]
debug = false

[features]
default = ['std']
std = ['alloc', 'somen/std', 'num-traits/std']
alloc = ['somen/alloc']
libm = ['num-traits/libm']
nightly = []

[dependencies]
somen = { version = "0.3.0-beta", default_features = false }
num-traits = { version = "0.2", default_features = false }
compute-float = "0.1.0"

[dev-dependencies]
futures = "0.3"
